--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,54 @@ form .btn {
     text-shadow: 1px 1px 3px rgb(255, 253, 253);
     margin-bottom: 2rem;
 }
+@media (width < 768px){
+    #cssa {
+        margin-right: 150px;
+        z-index: 1000px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 2.5rem;
+        font-weight: 1000;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        margin-bottom: 0.5rem;
+    }
+    .parallax-section {
+        background: url('img/background4.jpg') no-repeat center center fixed;
+        background-size: cover;
+        height: 100vh;
+        width: 791px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        position: relative;
+        overflow: hidden;
+        color: #fff;
+        
+        
+    }
+}
+#za{
+    width: 500px;
+    
+    height: 300px;
+}
+#zx{
+    display: flex;
+    
+}
+#zx ul{
+    padding-left: 30px;
+}
+.svg-wave {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+    left: -470px;
+   
+}
+.svg-hero{
+    width: 1820px;
+}
 #lk {
     
     margin-top: -100px;
