--- a/styles.css
+++ b/styles.css
@@ -172,29 +172,43 @@ form .btn {
     margin-bottom: 2rem;
 }
 @media (width < 768px){
-    #cssa {
-        margin-right: 150px;
+   #cssa {
+        margin-right: 90px;
         z-index: 1000px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 2.5rem;
-        font-weight: 1000;
+        font-size: 1.5rem;
+        font-weight: 400;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         margin-bottom: 0.5rem;
     }
     .parallax-section {
         background: url('img/background4.jpg') no-repeat center center fixed;
         background-size: cover;
-        height: 100vh;
-        width: 791px;
+        background-position-x: -200px;
+        background-position-y: -200px;
+        height: 95vh;
+        width: 752px;
         display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
         position: relative;
         overflow: hidden;
+        opacity: 1;
         color: #fff;
         
         
+        
+    }
+    #svg-hero{
+        width: 1100px;
+    }
+    #svg-wave {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        left: -300px;
+       
     }
 }
 #za{
