--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,43 @@ h2{
 
 
 
+/*  */
+#carousel-container {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap; /* Prevents the content from wrapping to a new line */
+  }
+  
+  #carousel-content {
+    display: inline-block;
+    white-space: nowrap; /* Makes the logos sit side-by-side in a line */
+    animation: slide 30s linear infinite; /* Infinite scrolling animation */
+  }
+  
+  .section03 {
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+    margin: 0 20px;
+  }
+  .section03 img{
+    width: 100%;
+    height: 200px;
+  }
+  
+  @keyframes slide {
+    0% {
+      transform: translateX(0); /* Start from the beginning */
+    }
+    100% {
+      transform: translateX(-70%); /* Move left by 100% of the container's width */
+    }
+  }
+
+  
+  /*  */
+
+
 
 .owl-carousel .item {
     position: relative;
@@ -126,6 +163,106 @@ form .btn {
     overflow: hidden;
     color: #fff;
 }
+#zaay{
+    display: flex;
+}
+#zq{
+    width: 100%;
+    margin-left: 0px;
+}
+#zzv{
+    margin-left: 40px;
+   
+}
+@media only screen and (max-width: 600px){
+    #naa{
+        width: 750px;
+    }
+    #cssa {
+        margin-right: 90px;
+        z-index: 1000px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 1.5rem;
+        font-weight: 400;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        margin-bottom: 0.5rem;
+    }
+    .parallax-section {
+        background: url('img/background4.jpg') no-repeat center center fixed;
+        background-size: cover;
+        background-position-x: 0px;
+        background-position-y: -200px;
+        height: 95vh;
+        width: 750px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        position: relative;
+        overflow: hidden;
+        opacity: 1;
+        color: #fff;
+        
+        
+        
+    }
+    #svg-hero{
+        width: 1100px;
+    }
+    #svg-wave {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        left: -300px;
+       
+    }
+    #imm{
+        margin-left: 100px;
+    }
+    #dsaa{
+        width: 750px;
+        margin-left: 90px;
+    }
+    #gss{
+        width: 750px;
+    }
+    #zaay{
+        display:block;
+    }
+    #zq{
+        width: 750px;
+        margin-left: -100px;
+    }
+    #zzv{
+        margin-left: 100px;
+       
+    }
+    #portfolio{
+        width: 750px;
+    }
+    #ppe{
+        
+        padding-bottom: 30px;
+    }
+    #pps{
+        width: 700px;
+        margin-left: -90px;
+    }
+    #carousel-container{
+        width: 750px;
+        margin-left: -100px;
+    }
+    #section4{
+        width: 750px;
+    }
+    #contact{
+        width: 750px;
+    }
+    #footer1{
+        width: 750px;
+    }
+    
+}
 #za{
     width: 500px;
     
@@ -143,6 +280,10 @@ form .btn {
 	bottom: 0;
 	width: 100%;
     left: -470px;
+   
+}
+.svg-hero{
+    width: 1820px;
 }
 
 .parallax-section::before {
@@ -170,68 +311,6 @@ form .btn {
     font-size: 1.5rem;
     text-shadow: 1px 1px 3px rgb(255, 253, 253);
     margin-bottom: 2rem;
-}
-@media (width < 768px){
-   #cssa {
-        margin-right: 90px;
-        z-index: 1000px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 1.5rem;
-        font-weight: 400;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        margin-bottom: 0.5rem;
-    }
-    .parallax-section {
-        background: url('img/background4.jpg') no-repeat center center fixed;
-        background-size: cover;
-        background-position-x: -200px;
-        background-position-y: -200px;
-        height: 95vh;
-        width: 752px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        position: relative;
-        overflow: hidden;
-        opacity: 1;
-        color: #fff;
-        
-        
-        
-    }
-    #svg-hero{
-        width: 1100px;
-    }
-    #svg-wave {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        left: -300px;
-       
-    }
-}
-#za{
-    width: 500px;
-    
-    height: 300px;
-}
-#zx{
-    display: flex;
-    
-}
-#zx ul{
-    padding-left: 30px;
-}
-.svg-wave {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-    left: -470px;
-   
-}
-.svg-hero{
-    width: 1820px;
 }
 #lk {
     
@@ -324,39 +403,6 @@ form .btn {
     border-radius: 10px;
     transition: width 0.6s ease;
 }
-/*  */
-#carousel-container {
-    width: 100%;
-    overflow: hidden;
-    white-space: nowrap; /* Prevents the content from wrapping to a new line */
-  }
-  
-  #carousel-content {
-    display: inline-block;
-    white-space: nowrap; /* Makes the logos sit side-by-side in a line */
-    animation: slide 30s linear infinite; /* Infinite scrolling animation */
-  }
-  
-  .section03 {
-    display: inline-block;
-    width: 200px;
-    text-align: center;
-    margin: 0 20px;
-  }
-  .section03 img{
-    width: 100%;
-    height: 200px;
-  }
-  
-  @keyframes slide {
-    0% {
-      transform: translateX(0); /* Start from the beginning */
-    }
-    100% {
-      transform: translateX(-70%); /* Move left by 100% of the container's width */
-    }
-  }
-  /*  */
 
 .timeline {
     margin-top: 2rem;
