--- a/styles.css
+++ b/styles.css
@@ -190,10 +190,10 @@ form .btn {
     .parallax-section {
         background: url('img/background4.jpg') no-repeat center center fixed;
         background-size: cover;
-       background-position: center;
+       background-repeat: no-repeat;
         
         
-        display: flex;
+        
         align-items: center;
         justify-content: center;
         text-align: center;
@@ -206,11 +206,11 @@ form .btn {
         
     }
     #svg-hero{
-       
+        width: 600px;
 
     }
     #svg-wave {
-        
+        position: absolute;
         bottom: 0;
         
         left:0px;
