--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ form .btn {
     }
     .parallax-section {
         background: url('img/background4.jpg') no-repeat center center fixed;
-        background-size: cover;
+        background-size: contain;
         height: 100vh;
         display: flex;
         align-items: center;
