--- a/styles.css
+++ b/styles.css
@@ -192,10 +192,10 @@ form .btn {
         background-size: contain;
         height: ;
         display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        position: relative;
+        align-items: ;
+        justify-content: ;
+        text-align: ;
+        position: ;
         overflow: hidden;
         color: #fff;
         background-position-x: -100px;
