--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ form .btn {
     .parallax-section {
         background: url('img/background4.jpg') no-repeat center center fixed;
         background-size: contain;
+        background-position: center;
         height: ;
         display: flex;
         align-items: ;
